tests/rustdoc-ui/intra-doc/span-ice-55723.stderr
error: unresolved link to `i`
  --> $DIR/span-ice-55723.rs:9:10
   |
LL | /// （arr[i]）
   |           ^ no item named `i` in scope
   |
   = help: to escape `[` and `]` characters, add '\' before them like `\[` or `\]`
note: the lint level is defined here
  --> $DIR/span-ice-55723.rs:1:9
   |
LL | #![deny(rustdoc::broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

